[package]
name = "todl"
description = "Tool for finding comment tags in source code"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RuairidhWilliamson/todl"
exclude = [
    "temp"
]

[dependencies]
walkdir = "2"
regex = "1"
git2 = { version = "0.16" }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.26"
atty = "0.2.14"
unicode-segmentation = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "search"
harness = false
