[package]
name = "todl"
description = "Tool for finding comment tags in source code"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RuairidhWilliamson/todl"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["temp"]

[dependencies]
walkdir = "2"
regex = "1"
git2 = { version = "0.16" }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.26"
atty = "0.2.14"
unicode-segmentation = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "search"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Cargo
cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
