[package]
name = "todl"
description = "Tool for finding comment tags in source code"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RuairidhWilliamson/todl"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["temp"]

[features]
cli = [
  "color",
  "dep:atty",
  "dep:clap",
  "dep:serde_json",
  "dep:unicode-segmentation",
]
color = ["dep:crossterm"]
default = ["cli"]

[dependencies]
atty = { version = "0.2.14", optional = true }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"], optional = true }
crossterm = { version = "0.26", optional = true }
git2 = "0.16"
ignore = "0.4.23"
regex = "1"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "search"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Cargo
cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
